--- a/about.html
+++ b/about.html
@@ -24,13 +24,15 @@
 
 	<div class="container">
 		<div id="about">
-		
 
-		
+
+
 
 		<img class=profile src="img/me.jpg">
 
-	<p class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ligula orci, dictum ut finibus eu, imperdiet in felis. Nullam ac interdum nisl. Curabitur luctus hendrerit vehicula. Mauris vitae finibus mauris, non volutpat lectus. Vestibulum posuere convallis velit sit amet accumsan. Morbi viverra, ligula sed finibus semper, arcu leo porta mauris, non porttitor nisl lacus vel ex. Maecenas pharetra vestibulum purus at imperdiet. Integer eget sapien consequat, efficitur sem eget, tempus tortor. Proin posuere efficitur gravida. Aliquam eleifend faucibus orci a lobortis. Nunc ut tempor erat. Nulla quam massa, gravida a maximus ut, luctus quis turpis. Aenean non consectetur sapien. Quisque commodo, mauris at mollis feugiat, dolor ipsum pellentesque justo, bibendum maximus lacus tortor eget lacus. Etiam et nulla molestie, tristique dolor eu, dignissim metus.</p>
+	<p class="about">Just a guy paasionate about technology. I started playing around with HTML/CSS in early 2015 when a friend asked me to help him with his website. Since then I've expanded my knowledge to use frameworks like bootstrap for CSS and Flask for Python. I hope that one day the code that I write helps make the world a better place. </p>
+
+	<p class="about">"Talk is cheap. Show me the code." - Linus Torvalds</p>
 
 
 
@@ -48,7 +50,7 @@
 				<a class="social twiter" href="http://www.twitter.com/rocketman225"><img src="img/twitter.png"></a>
 				<a class="social linkedin" href="https://www.linkedin.com/in/marvin-martinez"><img src="img/linkdin.png"></a>
 			</div>
-			
+
 			<div class="contact">
 
 				<h3>Contact Me</h3>
