--- a/portfolio.html
+++ b/portfolio.html
@@ -22,24 +22,8 @@
 		</span>
 	</div>
 	<div id="container">
-		<div class="one">
-			<img height="300px" width="290px" class="portfolio" src="img/portfolio/bull.jpg" />
-			<img height="300px" width="290px" class="portfolio padding" src="img/sunset.jpg" />
-			<img height="300px" width="290px" class="portfolio padding" src="img/portfolio/landscape.jpg" />
-		</div>
-
-		<div class="two">
-			<img height="300px" width="290px" class="portfolio" src="img/portfolio/landscape2.jpg" />
-			<img height="300px" width="290px" class="portfolio padding" src="img/portfolio/monks.jpg" />
-			<img height="300px" width="290px" class="portfolio padding" src="img/portfolio/newzealand.jpg" />
-		</div>
-
-		<div class="three">
-			<img height="300px" width="290px" class="portfolio" src="img/portfolio/rainbow.jpg" />
-			<img height="300px" width="290px" class="portfolio padding" src="img/portfolio/santorini.jpg" />
-			<img height="300px" width="290px" class="portfolio padding" src="img/portfolio/sunrise.jpg" />
-		</div>
-
+		<p class="site"><a href="http://35.166.71.133/">Guessblur.site</a>/<a class="repo" href="https://github.com/DigitalCrafts-HTX-11-2016-Cohort/guessblur">Github Repo</a></p>
+		<img class="guess" src="img/guessblur.png" alt="">
 
 
 	</div>
@@ -53,7 +37,7 @@
 				<a class="social twiter" href="http://www.twitter.com/rocketman225" target="_blank"><img src="img/twitter.png"></a>
 				<a class="social linkedin" href="https://www.linkedin.com/in/marvin-martinez" target="_blank"><img src="img/linkdin.png"></a>
 			</div>
-			
+
 			<div class="contact">
 
 				<h3>Contact Me</h3>
@@ -77,23 +61,7 @@
 
 		</div>
 
-	</footer>	
+	</footer>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
