trying out SCSS. broke stuff.

--- a/about.html
+++ b/about.html
@@ -3,14 +3,13 @@
 <head>
 	<meta name="viewport" content="width=device-width, inital-scale=1">
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="scss/style.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
 	<title>Marvin Martinez | About</title>
 </head>
 <body>
 	<div id="head">
 		<div class="header">
-			<a href="index.html"><img class="logo" src="img/diamond.png"></a>
 			<nav class="fixed-nav-bar">
 				<a class="navbar" href="index.html">Home</a>
 				<a class="navbar" href="portfolio.html">Portfolio</a>
