--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, inital-scale=1">
 	<meta charset="utf-8">
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="scss/style.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
 	<title>Marvin Martinez | Web Developer</title>
 </head>
@@ -16,7 +12,6 @@
 	<div class="main">
 		<div id="container">
 			<div class="header">
-				<a href="index.html"><img class="logo" src="img/diamond.png"></a>
 				<nav>
 					<a class="navbar" href="index.html">Home</a>
 					<a class="navbar" href="portfolio.html">Portfolio</a>
