changed some stuff

--- a/about.html
+++ b/about.html
@@ -1,82 +1,86 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta name="viewport" content="width=device-width, inital-scale=1">
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="scss/style.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
-	<title>Marvin Martinez | About</title>
+    <meta name="viewport" content="width=device-width, inital-scale=1">
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="scss/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
+    <title>Marvin Martinez | About</title>
 </head>
+
 <body>
-	<div id="head">
-		<div class="header">
-			<nav class="fixed-nav-bar">
-				<a class="navbar" href="index.html">Home</a>
-				<a class="navbar" href="portfolio.html">Portfolio</a>
-				<a class="navbar" href="about.html">About</a>
-			</nav>
-		</div>
-			<span>
-		<h1 class="port">About Me</h1>
-	</span>
-	</div>
+    <div id="head">
+        <div class="header">
+            <nav class="fixed-nav-bar">
+                <a class="navbar" href="index.html">Home</a>
+                <a class="navbar" href="portfolio.html">Portfolio</a>
+                <a class="navbar" href="about.html">About</a>
+            </nav>
+        </div>
+        <span>
+<h1 class="port">About Me</h1>
+</span>
+    </div>
 
-	<div class="container">
-		<div id="about">
-
-
-
-
-		<img class=profile src="img/me.jpg">
-
-	<p class="about">Just a guy paasionate about technology. I started playing around with HTML/CSS in early 2015 when a friend asked me to help him with his website. Since then I've expanded my knowledge to use frameworks like bootstrap for CSS and Flask for Python. I hope that one day the code that I write helps make the world a better place. </p>
-
-	<p class="about">"Talk is cheap. Show me the code." - Linus Torvalds</p>
-
-
-
-		</div>
-
-
-</div>
-
-<footer class="about">
-		<div id="foot">
-			<div class="social">
-				<h3>Stay Connected</h3>
-
-				<a class="social facebook" href="http://www.facebook.com/rocketman01"><img src="img/facebook.png"></a>
-				<a class="social twiter" href="http://www.twitter.com/rocketman225"><img src="img/twitter.png"></a>
-				<a class="social linkedin" href="https://www.linkedin.com/in/marvin-martinez"><img src="img/linkdin.png"></a>
-			</div>
-
-			<div class="contact">
-
-				<h3>Contact Me</h3>
-
-				<form class="contact" name="form" method="post">
-					<label for="name">Name</label><br>
-					<input class="text" type="text" name="name">
-					<br><br>
-
-					<label for="email">Email</label><br>
-					<input class="text" type="text" name="email">
-					<br><br>
-
-					<label for="message">Message</label><br>
-					<textarea class="message" name="message"></textarea>
-					<br><br>
-
-					<input class="submit" type="submit" name="submit" value="submit">
-				</form>
-			</div>
-
-		</div>
-
-	</footer>
+    <div class="container">
+        <div id="about">
 
 
 
 
-	</body>
-	</html>
+            <img class=profile src="img/me.jpg">
+
+            <p class="about">Just a guy paasionate about technology. I started playing around with HTML/CSS in early 2015 when a friend asked me to help him with his website. Since then I've expanded my knowledge to use frameworks like bootstrap for CSS and Flask for
+                Python. I hope that one day the code that I write helps make the world a better place. </p>
+
+            <p class="about">"Talk is cheap. Show me the code." - Linus Torvalds</p>
+
+
+
+        </div>
+
+
+    </div>
+
+    <footer class="about">
+        <div id="foot">
+            <div class="social">
+                <h3>Stay Connected</h3>
+
+                <a class="social facebook" href="http://www.facebook.com/rocketman01"><img src="img/facebook.png"></a>
+                <a class="social twiter" href="http://www.twitter.com/rocketman225"><img src="img/twitter.png"></a>
+                <a class="social linkedin" href="https://www.linkedin.com/in/marvin-martinez"><img src="img/linkdin.png"></a>
+            </div>
+
+            <div class="contact">
+
+                <h3>Contact Me</h3>
+
+                <form class="contact" name="form" method="post">
+                    <label for="name">Name</label><br>
+                    <input class="text" type="text" name="name">
+                    <br><br>
+
+                    <label for="email">Email</label><br>
+                    <input class="text" type="text" name="email">
+                    <br><br>
+
+                    <label for="message">Message</label><br>
+                    <textarea class="message" name="message"></textarea>
+                    <br><br>
+
+                    <input class="submit" type="submit" name="submit" value="submit">
+                </form>
+            </div>
+
+        </div>
+
+    </footer>
+
+
+
+
+</body>
+
+</html>
